#1: Make library compile with Java 8.